--- a/package.json
+++ b/package.json
@@ -1,11 +1,35 @@
 {
   "name": "bangla-money-format",
   "version": "1.0.0",
-  "description": "",
-  "main": "/src/index.js",
+  "description": "A comprehensive Bengali/Bangla money and number formatting library with support for traditional scales, English conversion, and short forms",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js",
+    "demo": "node demo.js"
   },
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "bangla",
+    "bengali",
+    "money",
+    "format",
+    "number",
+    "currency",
+    "taka",
+    "traditional",
+    "scale",
+    "converter"
+  ],
+  "author": "nizamseu",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nizamseu/bangla-money-format.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nizamseu/bangla-money-format/issues"
+  },
+  "homepage": "https://github.com/nizamseu/bangla-money-format#readme",
+  "engines": {
+    "node": ">=12.0.0"
+  }
 }
