✨ feat(bn-text): Add accurate Bengali compound number conversion (21-99)
Implement linguistically accurate representation for Bengali compound numbers from 21 to 99.

- Introduced a comprehensive `specialNumbers` mapping for all compound forms (e.g., একুশ, পঁচাত্তর, নিরানব্বই).
- Updated `convertBelowHundred` logic to prioritize these correct forms, resolving previous inaccuracies where numbers like 75 were rendered as "সত্তর পাঁচ" instead of "পঁচাত্তর".
- Enhanced the `bengaliToEnglish` translation mapping to include these new compound numbers.
- Updated documentation (API, README, QUICKSTART) and changelog to reflect this significant improvement in linguistic correctness.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bangla-money-format",
-  "version": "1.0.0",
-  "description": "A comprehensive Bengali/Bangla money and number formatting library with support for traditional scales, English conversion, and short forms",
+  "version": "1.1.0",
+  "description": "A comprehensive Bengali/Bangla money and number formatting library with accurate compound numbers, traditional scales, English conversion, and short forms",
   "main": "src/index.js",
   "scripts": {
     "test": "node test.js",
@@ -17,7 +17,10 @@
     "taka",
     "traditional",
     "scale",
-    "converter"
+    "converter",
+    "accurate",
+    "compound",
+    "linguistic"
   ],
   "author": "nizamseu",
   "license": "MIT",
