✨ feat(traditional-scale): Enhance traditional Bengali number scale system
Improve the linguistic accuracy and clarity of traditional Bengali number scales.

This update:
*   Replaces abstract traditional unit names (e.g., `অর্বুদ`, `খর্ব`) with
    more descriptive Bengali phrases (e.g., `একশত কোটি`, `এক হাজার কোটি`).
*   Refines the conversion logic to ensure grammatically correct output,
    avoiding redundant "এক" (e.g., "একশত কোটি" instead of "এক একশত কোটি").
*   Updates English equivalent mappings to align with the new Bengali terms.
*   Reflects these changes in the `README.md` documentation, `CHANGELOG.md`,
    and comprehensive test suite.

This provides a more precise and culturally appropriate representation for
very large numbers.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bangla-money-format",
-  "version": "1.1.0",
-  "description": "A comprehensive Bengali/Bangla money and number formatting library with accurate compound numbers, traditional scales, English conversion, and short forms",
+  "version": "1.2.0",
+  "description": "A comprehensive Bengali/Bangla money and number formatting library with accurate compound numbers, improved traditional scales, English conversion, and short forms",
   "main": "src/index.js",
   "scripts": {
     "test": "node test.js",
