📝 docs: Consolidate documentation and enhance module support
*   Merged `API.md`, `CONTRIBUTING.md`, and `QUICKSTART.md` content into `README.md` for a unified documentation experience.
*   Expanded `README.md` with detailed use cases, SEO tags, compatibility, regional support, and performance notes.
*   Added Bengali translations to `README.md` sections for improved accessibility.
*   Updated `demo.js` with more comprehensive examples, including compound numbers and traditional scales, and added usage comments for various environments (ES6, TypeScript, Browser, Frameworks).
*   Configured `package.json` for proper ES6 module support (`type`, `module`, `exports`).
*   Updated `.npmignore` to exclude `demo.js` and `test.js` from the published package, reducing package size.
*   Expanded `keywords` in `package.json` with Bengali terms and specific application-related tags for improved discoverability.
*   Removed redundant `LICENSE` file, relying on `package.json` and `README.md` for license information.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "bangla-money-format",
   "version": "1.2.0",
-  "description": "A comprehensive Bengali/Bangla money and number formatting library with accurate compound numbers, improved traditional scales, English conversion, and short forms",
+  "description": "সম্পূর্ণ বাংলা টাকা ও সংখ্যা ফরম্যাটিং লাইব্রেরি - Complete Bengali/Bangla money and number formatting library with accurate compound numbers, improved traditional scales, English conversion, and short forms",
   "main": "src/index.js",
+  "module": "src/index.js",
+  "type": "commonjs",
+  "exports": {
+    ".": {
+      "require": "./src/index.js",
+      "import": "./src/index.js"
+    }
+  },
   "scripts": {
     "test": "node test.js",
     "demo": "node demo.js"
@@ -20,16 +28,70 @@
     "converter",
     "accurate",
     "compound",
-    "linguistic"
+    "linguistic",
+    "বাংলা",
+    "বাংলা-টাকা",
+    "টাকা-ফরম্যাট",
+    "সংখ্যা-রূপান্তর",
+    "bangladesh",
+    "bengali-number",
+    "bengali-currency",
+    "bangla-money",
+    "bangla-number",
+    "bangla-currency",
+    "bangladesh-taka",
+    "bengali-text",
+    "number-to-bengali",
+    "number-to-bangla",
+    "bengali-formatting",
+    "bangla-formatting",
+    "financial",
+    "finance",
+    "accounting",
+    "calculation",
+    "mathematics",
+    "localization",
+    "i18n",
+    "internationalization",
+    "south-asia",
+    "text-conversion",
+    "digit-conversion",
+    "crore",
+    "lakh",
+    "thousand",
+    "million",
+    "billion",
+    "trillion",
+    "অর্বুদ",
+    "খর্ব",
+    "নিল",
+    "পদ্ম",
+    "শঙ্খ",
+    "কোটি",
+    "লাখ",
+    "হাজার",
+    "compound-numbers",
+    "traditional-scale",
+    "modern-scale",
+    "bengali-script",
+    "bangla-script",
+    "unicode-bengali",
+    "bdt-currency",
+    "bangladesh-currency",
+    "monetary-formatting",
+    "price-formatting",
+    "invoice-formatting",
+    "receipt-formatting",
+    "ecommerce",
+    "fintech",
+    "banking",
+    "payment"
   ],
   "author": "nizamseu",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/nizamseu/bangla-money-format.git"
-  },
-  "bugs": {
-    "url": "https://github.com/nizamseu/bangla-money-format/issues"
   },
   "homepage": "https://github.com/nizamseu/bangla-money-format#readme",
   "engines": {
