--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bangla-money-format",
   "version": "1.2.4",
-  "description": "সম্পূর্ণ বাংলা টাকা ও সংখ্যা ফরম্যাটিং লাইব্রেরি - Complete Bengali/Bangla money and number formatting library with accurate compound numbers, improved traditional scales, English conversion, and short forms",
+  "description": "🇧🇩 Complete Bengali/Bangla money & number formatting library for JavaScript. Convert numbers to Bengali text (৭৫→পঁচাত্তর টাকা), format Bangladesh Taka currency with proper comma placement (১০০০০০০→৳১০,০০,০০০). Perfect for React, Vue, Angular, Node.js applications. Features: compound numbers, traditional scales (কোটি/লাখ), English conversion, short forms (K,M,B,T), Indian number system. Best NPM package for Bengali currency formatting.",
   "main": "src/index.js",
   "module": "src/index.js",
   "type": "commonjs",
@@ -85,7 +85,36 @@
     "ecommerce",
     "fintech",
     "banking",
-    "payment"
+    "payment",
+    "bangla-money-converter",
+    "bengali-money-converter",
+    "taka-converter",
+    "bangladesh-money-format",
+    "bengali-currency-formatter",
+    "bangla-number-formatter",
+    "money-format-bangladesh",
+    "currency-format-bengali",
+    "npm-bangla-money",
+    "javascript-bangla-money",
+    "node-bangla-money",
+    "react-bangla-money",
+    "vue-bangla-money",
+    "angular-bangla-money",
+    "javascript-library",
+    "number-formatter",
+    "currency-converter",
+    "bengali-npm",
+    "bangladesh-npm",
+    "bangla-js",
+    "bengali-js",
+    "indian-numbering",
+    "south-asian-currency",
+    "financial-formatting",
+    "pos-system",
+    "invoice-generator",
+    "receipt-generator",
+    "accounting-software",
+    "point-of-sale"
   ],
   "author": "nizamseu",
   "license": "MIT",
@@ -93,7 +122,7 @@
     "type": "git",
     "url": "https://github.com/nizamseu/bangla-money-format.git"
   },
-  "homepage": "https://github.com/nizamseu/bangla-money-format#readme",
+  "homepage": "https://nizamseu.github.io/bangla-money-format",
   "engines": {
     "node": ">=12.0.0"
   }
